--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: BlockScout CI/CD
+name: block-scout pipeline
 on: [push, pull_request]
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.20
+        go-version: 1.22
     - name: Install dependencies
       run: go mod tidy
     - name: Run linter
