fix release step of a CI/CD pipeline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,16 +36,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: Bump Version
-      id: bump_version
-      uses: einaregilsson/semver-action@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: master
-    - name: Get Version
-      id: get_version
-      run: |
-        echo "VERSION=${{ steps.bump_version.outputs.new_version }}" >> $GITHUB_ENV
+    - name: Version
+      id: version_bump
+      uses: anothrNick/github-tag-action@1.38.0
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        DEFAULT_BUMP: "patch"
+        RELEASE_BRANCHES: "master"
+        WITH_V: true
     - name: Download artifacts
       uses: actions/download-artifact@v3
       with:
@@ -53,8 +51,8 @@ jobs:
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v${{ env.VERSION }}
-        release_name: "Block Scout v${{ env.VERSION }}"
+        tag_name: ${{steps.version_bump.outputs.tag}}
+        release_name: "Block Scout ${{steps.version_bump.outputs.tag}}"
         files: |
           block-scout-ubuntu-latest
           block-scout-macos-latest
